# f1-stalker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: release.yml
.specs/: v0.0.0.md  v0.1.0.md  v0.1.3.md  v0.2.0.draft.md  v0.md  v1.md  v2.draft.md
f1-stalker-site/: index.html  package.json  pnpm-lock.yaml
f1-stalker-site/src/: App.tsx  index.css
scripts/: build-linux-appimage.sh  build-macos-app.sh  build-macos-dmg.sh  build-release.sh  dev.sh  publish-site-releases.sh  setup-githooks.sh  setup-macos-codesign-cert.sh  sign-macos-app.sh
src/: app.rs  main.rs  state.rs
src/assets/: fonts.rs  macos_menu.rs  macos_platform.rs  mod.rs
src/data/: cache.rs  cache_policy.rs  championship.rs  drivers.rs  grid.rs  mod.rs  open_meteo.rs  openf1.rs  track_weather.rs  weekend.rs
src/db/: assets.rs  custom_theme.rs  mod.rs  schema.rs  settings.rs  store.rs
src/debug/: log.rs  mod.rs
src/domain/: calendar.rs  calendar_filter.rs  calendar_prefs.rs  championship.rs  circuit_assets.rs  countdown.rs  driver_assets.rs  driver_picker.rs  drivers.rs  grid.rs  mod.rs  narrative.rs  notifications.rs  podium.rs  rival.rs  season_calendar.rs  standings.rs  time_format.rs  weather.rs
src/platform/: instance.rs  macos_dock.rs  mod.rs  notifications.rs  tray.rs
src/state/: bootstrap.rs
src/ui/: about.rs  boot_screen.rs  championship_charts.rs  components.rs  dashboard.rs  decals.rs  driver_card.rs  driver_picker.rs  first_run.rs  fonts.rs  icons.rs  layout.rs  mod.rs  pinned_drivers.rs  scroll.rs  (+9 more)
(+9 files in other folders)
